# rpass

./: .gitignore  CMakeLists.txt  rpassd.cpp  rpassd_password.cpp  rpassd_password.hxx  rpassd_signal_handlers.cpp  rpassd_signal_handlers.hxx
python_interface/: README.asciidoc  rp  rpass.1  rpass.example.conf  rpassword-manager  ru  setup.py
python_interface/rpass/: rpass.py  rpass_interface.py
